AfterDeploymentFiles/k8s/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: backend

spec:
  replicas: 1

  selector:
    matchLabels:
      app: backend

  template:
    metadata:
      labels:
        app: backend

    spec:
      containers:
        - name: backend
          image: public.ecr.aws/v2n1v6c7/backend-app:latest

          ports:
            - containerPort: 3500
