AfterDeploymentFiles/k8s/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: frontend

spec:
  replicas: 1

  selector:
    matchLabels:
      app: frontend

  template:
    metadata:
      labels:
        app: frontend

    spec:
      containers:
        - name: frontend
          image: public.ecr.aws/v2n1v6c7/frontend-app:latest

          ports:
            - containerPort: 3000
